samples/_failures_safe/1761355648_a6530c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72158636.c: In function ‘main’:
./samples/SAFE/__tmp_72158636.c:135:12: error: missing terminating " character
  135 |     printf("Matrix Operations Program
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_72158636.c:135:5: error: expected expression at end of input
  135 |     printf("Matrix Operations Program
      |     ^~~~~~
./samples/SAFE/__tmp_72158636.c:135:5: error: expected declaration or statement at end of input
